// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not report deletions 1`] = `
"Fetching latest master...
Computing coverage on diff...
No diff information found.


No coverage information found for any of the new lines in the diff."
`;

exports[`should not report if nothing changes 1`] = `
"Fetching latest master...
Computing coverage on diff...
No diff information found.


No coverage information found for any of the new lines in the diff."
`;

exports[`should report all three 1`] = `
"Fetching latest master...
Computing coverage on diff...
Diff files:

  util.ts

Diff coverage results:

  F = Function coverage
  L = Line coverage
  B = Branch coverage

------------------------------------------------------------------------------
util.ts
------------------------------------------------------------------------------
1   F | L | B(1/2)export const add = (num1: number, num2: number) => num1 ? num1 + num2 : num1
2                 export const subtract = (num1: number, num2: number) => num1 - num2
3   F | L         export const divide = (num1: number, num2: number) => num1 / num2
4   L             export const math = { add, divide, subtract }
------------------------------------------------------------------------------


Diff coverage statistics:
------------------------------------------------------------------------------
|     lines      |    branches    |   functions    |   path
------------------------------------------------------------------------------
| 100% (3/3)     |  50% (1/2)     |  50% (1/2)     | util.ts
------------------------------------------------------------------------------

Total diff coverage:

 - lines: 100% (3/3)
 - branches: 50% (1/2)
 - functions: 50% (1/2)

ERROR: Insufficient branch coverage of 50% (1/2). Required 80%.
ERROR: Insufficient function coverage of 50% (1/2). Required 90%."
`;

exports[`should report changes across multiple files 1`] = `
"Fetching latest master...
Computing coverage on diff...
Diff files:

  util.ts
  util1.ts

Diff coverage results:

  F = Function coverage
  L = Line coverage
  B = Branch coverage

------------------------------------------------------------------------------
util.ts
------------------------------------------------------------------------------
1   F | L | B(1/2)export const add = (num1: number, num2: number) => num1 ? num1 + num2 : num1
2                 export const subtract = (num1: number, num2: number) => num1 - num2
3   F | L         export const divide = (num1: number, num2: number) => num1 / num2
4   L             export const math = { add, divide, subtract }
------------------------------------------------------------------------------

------------------------------------------------------------------------------
util1.ts
------------------------------------------------------------------------------
1   F | L | B(0/2)export const add = (num1: number, num2: number) => num1 ? num1 + num2 : num1
2   F | L         export const subtract = (num1: number, num2: number) => num1 - num2
3   F | L         export const divide = (num1: number, num2: number) => num1 / num2
4   L             export const math = { add, divide, subtract }
------------------------------------------------------------------------------


Diff coverage statistics:
------------------------------------------------------------------------------
|     lines      |    branches    |   functions    |   path
------------------------------------------------------------------------------
| 100% (3/3)     |  50% (1/2)     |  50% (1/2)     | util.ts
|   0% (0/4)     |   0% (0/2)     |   0% (0/3)     | util1.ts
------------------------------------------------------------------------------

Total diff coverage:

 - lines: 42% (3/7)
 - branches: 25% (1/4)
 - functions: 20% (1/5)

ERROR: Insufficient line coverage of 42% (3/7). Required 90%.
ERROR: Insufficient branch coverage of 25% (1/4). Required 80%.
ERROR: Insufficient function coverage of 20% (1/5). Required 90%."
`;

exports[`should report new branches 1`] = `
"Fetching latest master...
Computing coverage on diff...
Diff files:

  util.ts

Diff coverage results:

  F = Function coverage
  L = Line coverage
  B = Branch coverage

------------------------------------------------------------------------------
util.ts
------------------------------------------------------------------------------
1   F | L | B(1/2)export const add = (num1: number, num2: number) => num1 ? num1 + num2 : num1
2                 export const subtract = (num1: number, num2: number) => num1 - num2
------------------------------------------------------------------------------


Diff coverage statistics:
------------------------------------------------------------------------------
|     lines      |    branches    |   functions    |   path
------------------------------------------------------------------------------
| 100% (1/1)     |  50% (1/2)     | 100% (1/1)     | util.ts
------------------------------------------------------------------------------

Total diff coverage:

 - lines: 100% (1/1)
 - branches: 50% (1/2)
 - functions: 100% (1/1)

ERROR: Insufficient branch coverage of 50% (1/2). Required 80%."
`;

exports[`should report new functions 1`] = `
"Fetching latest master...
Computing coverage on diff...
Diff files:

  util.ts

Diff coverage results:

  F = Function coverage
  L = Line coverage
  B = Branch coverage

------------------------------------------------------------------------------
util.ts
------------------------------------------------------------------------------
1                 export const add = (num1: number, num2: number) => num1 + num2
2                 export const subtract = (num1: number, num2: number) => num1 - num2
3   F | L         export const divide = (num1: number, num2: number) => num1 / num2
------------------------------------------------------------------------------


Diff coverage statistics:
------------------------------------------------------------------------------
|     lines      |    branches    |   functions    |   path
------------------------------------------------------------------------------
| 100% (1/1)     | 100% (0/0)     |   0% (0/1)     | util.ts
------------------------------------------------------------------------------

Total diff coverage:

 - lines: 100% (1/1)
 - branches: 100% (0/0)
 - functions: 0% (0/1)

ERROR: Insufficient function coverage of 0% (0/1). Required 90%."
`;

exports[`should report new lines 1`] = `
"Fetching latest master...
Computing coverage on diff...
Diff files:

  util.ts

Diff coverage results:

  F = Function coverage
  L = Line coverage
  B = Branch coverage

------------------------------------------------------------------------------
util.ts
------------------------------------------------------------------------------
1                 export const add = (num1: number, num2: number) => num1 + num2
2                 export const subtract = (num1: number, num2: number) => num1 - num2
3   L             export const math = { add, subtract }
------------------------------------------------------------------------------


Diff coverage statistics:
------------------------------------------------------------------------------
|     lines      |    branches    |   functions    |   path
------------------------------------------------------------------------------
| 100% (1/1)     | 100% (0/0)     | 100% (0/0)     | util.ts
------------------------------------------------------------------------------

Total diff coverage:

 - lines: 100% (1/1)
 - branches: 100% (0/0)
 - functions: 100% (0/0)"
`;
